--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -4,11 +4,49 @@
   year   = {2023}
 }
 
+@article{clustersandcomp,
+  title   = {Clusters and the new economics of competition},
+  author  = {Porter, ME},
+  number  = {6},
+  volume  = {76},
+  year    = {1998},
+  journal = {Harvard business review},
+  issn    = {0017-8012},
+  pages   = {77—90},
+  url     = {http://europepmc.org/abstract/MED/10187248}
+}
+
+@article{clustertheory,
+  author  = {Kuah, Adrian},
+  year    = {2002},
+  month   = {10},
+  pages   = {206-228},
+  title   = {Cluster Theory and Practice: Advantages for the Small Business Locating in a Vibrant Cluster},
+  volume  = {4},
+  journal = {Journal of Research in Marketing and Entrepreneurship},
+  doi     = {10.1108/14715200280001472}
+}
+
 @article{devlin2018bert,
   title   = {Bert: Pre-training of deep bidirectional transformers for language understanding},
   author  = {Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
   journal = {arXiv preprint arXiv:1810.04805},
   year    = {2018}
+}
+
+@article{gems-model,
+  issn      = {00029246},
+  url       = {http://www.jstor.org/stable/23245182},
+  abstract  = {Geographical clustering of economic activity and business firms was first incisively and extensively analyzed by Alfred Marshall in his seminal text on economics (1890). However, Porter's Diamond model (1990, 1998) remains the paradigm model for cluster formation in modern economies. Developments in the economics of geography, institutional economics, and strategic management indicate that Porter's and others' models of cluster formation may be incomplete. The Global Economic Management System (GEMS) model of cluster formation and sustainability extends scholarly work in this area by outlining a comprehensive model of cluster formation and testing its robustness against data collected from a sample of global cluster managers. The results indicate the significance of a number of hitherto ignored factors in cluster success and provide guidelines for policy makers, cluster managers, and international firm managers for location decisions and cluster formation.},
+  author    = {Shyam Kamath and Jagdish Agrawal and Kris Chase},
+  journal   = {American Journal of Economics and Sociology},
+  number    = {1},
+  pages     = {184--214},
+  publisher = {American Journal of Economics and Sociology, Inc.},
+  title     = {Explaining Geographic Cluster Success—The GEMS Model},
+  urldate   = {2023-07-01},
+  volume    = {71},
+  year      = {2012}
 }
 
 @article{mikolov2013efficient,
@@ -40,6 +78,20 @@
   publisher = {OpenAI}
 }
 
+@article{regionaladv,
+  issn      = {00130095, 19448287},
+  url       = {http://www.jstor.org/stable/144358},
+  author    = {Meric S. Gertler and Paivi Oinas and Michael Storper and Philip Scranton},
+  journal   = {Economic Geography},
+  number    = {2},
+  pages     = {199--207},
+  publisher = {[Clark University, Wiley]},
+  title     = {Discussion of "Regional Advantage: Culture and Competition in Silicon Valley and Route 128" By AnnaLee Saxenian},
+  urldate   = {2023-07-01},
+  volume    = {71},
+  year      = {1995}
+}
+
 @article{reimers2019sentence,
   title   = {Sentence-bert: Sentence embeddings using siamese bert-networks},
   author  = {Reimers, Nils and Gurevych, Iryna},
@@ -55,6 +107,31 @@
   pages     = {139--147},
   year      = {2019},
   publisher = {Elsevier}
+}
+
+@article{saarlandeco1,
+  title    = {The transboundary automotive region of Saar-Lor-Lux: Political fantasy or economic reality?},
+  journal  = {Geoforum},
+  volume   = {48},
+  pages    = {102-113},
+  year     = {2013},
+  issn     = {0016-7185},
+  doi      = {https://doi.org/10.1016/j.geoforum.2013.04.022},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0016718513000948},
+  author   = {Christoph K. Hahn},
+  keywords = {Transboundary region, Cross-border economic integration, Border effect, Micro-level approach, Automotive industry, Saar-Lor-Lux Greater Region},
+  abstract = {In times of globalization and a rescaling of political-economic processes, transboundary cooperation constitutes an important agenda for many border areas. Regional politicians try, for instance, to foster economic relationships to neighboring regions as a way to improve the competitiveness of the entire transboundary area. In order to understand these processes and to contribute to the formulation of suitable strategies, the paper analyzes the effects of borders on transboundary cooperation amongst automotive enterprises in the region of Saar-Lor-Lux which is one of the largest and most institutionalized cross-border regions in Europe. To do so, the paper adopts the perspective of relational economic geography. Additionally, insights provided by the literature on proximity and on barriers toward cross-border relations are used in order to explain the degree of transboundary cooperation. A micro-level approach is chosen and interaction patterns of automotive companies are examined by written questionnaires. In addition, prospects and limitations of cross-border cooperation are discussed through guided interviews with firm representatives and regional stakeholders. In doing so, the paper reveals that many, though not all enterprises are interested in transboundary relationships. Yet, at the same time, various negative and positive border effects are identified: Borders limit, for instance, information flows, cultural and legal systems as well as a sense of togetherness. These border effects, together with a suboptimal organizational structure of the regional automotive industry, constitute significant barriers for extensive cross-border cooperation within the region of Saar-Lor-Lux.}
+}
+
+@article{saarlandeco2,
+  author  = {Trippl, Michaela and Otto, Anne},
+  year    = {2009},
+  month   = {05},
+  pages   = {1217-1233},
+  title   = {How to Turn the Fate of Old Industrial Areas: A Comparison of Cluster-Based Renewal Processes in Styria and the Saarland},
+  volume  = {41},
+  journal = {Environment and Planning A},
+  doi     = {10.1068/a4129}
 }
 
 @inproceedings{ye2016word,
